fix(pagination): update bottom buttons to have even padding on mobile

--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -12,13 +12,11 @@
   --pf-c-pagination__nav-control--c-button--PaddingRight: var(--pf-global--spacer--sm);
   --pf-c-pagination__nav-control--c-button--PaddingLeft: var(--pf-global--spacer--sm);
   --pf-c-pagination__nav-control--c-button--FontSize: var(--pf-global--FontSize--md);
+  --pf-c-pagination--m-bottom__nav-control--c-button--OutlineOffset: calc(var(--pf-global--spacer--xs) * -1);
   --pf-c-pagination--m-bottom__nav-control--c-button--PaddingTop: var(--pf-global--spacer--md);
   --pf-c-pagination--m-bottom__nav-control--c-button--PaddingBottom: var(--pf-global--spacer--md);
-  --pf-c-pagination--m-bottom__nav-control--c-button--OutlineOffset: calc(var(--pf-global--spacer--xs) * -1);
-  --pf-c-pagination--m-bottom__nav-control--m-prev--c-button--PaddingLeft: var(--pf-global--spacer--md);
-  --pf-c-pagination--m-bottom__nav-control--m-prev--c-button--PaddingRight: var(--pf-global--spacer--lg);
-  --pf-c-pagination--m-bottom__nav-control--m-next--c-button--PaddingLeft: var(--pf-global--spacer--lg);
-  --pf-c-pagination--m-bottom__nav-control--m-next--c-button--PaddingRight: var(--pf-global--spacer--md);
+  --pf-c-pagination--m-bottom__nav-control--c-button--PaddingRight: var(--pf-global--spacer--md);
+  --pf-c-pagination--m-bottom__nav-control--c-button--PaddingRight: var(--pf-global--spacer--md);
   --pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingTop: var(--pf-global--spacer--form-element);
   --pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingRight: var(--pf-global--spacer--sm);
   --pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingBottom: var(--pf-global--spacer--form-element);
@@ -45,6 +43,10 @@
   --pf-c-pagination--m-bottom--xl--PaddingLeft: var(--pf-global--spacer--lg);
 
   @media screen and (min-width: $pf-global--breakpoint--md) {
+    --pf-c-pagination--m-bottom__nav-control--c-button--PaddingTop: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingTop);
+    --pf-c-pagination--m-bottom__nav-control--c-button--PaddingRight: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingRight);
+    --pf-c-pagination--m-bottom__nav-control--c-button--PaddingBottom: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingBottom);
+    --pf-c-pagination--m-bottom__nav-control--c-button--PaddingLeft: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingLeft);
     --pf-c-pagination--m-bottom--child--MarginRight: var(--pf-c-pagination--m-bottom--child--md--MarginRight);
     --pf-c-pagination--m-bottom__nav-control--c-button--OutlineOffset: 0;
     --pf-c-pagination--m-bottom--BoxShadow: none;
@@ -80,6 +82,8 @@
 
   &.pf-m-bottom {
     --pf-c-pagination--child--MarginRight: var(--pf-c-pagination--m-bottom--child--MarginRight);
+    --pf-c-pagination__nav-control--c-button--PaddingRight: var(--pf-c-pagination--m-bottom__nav-control--c-button--PaddingRight);
+    --pf-c-pagination__nav-control--c-button--PaddingLeft: var(--pf-c-pagination--m-bottom__nav-control--c-button--PaddingRight);
 
     .pf-c-pagination__nav-control {
       .pf-c-button {
@@ -114,16 +118,6 @@
       visibility: hidden;
     }
 
-    .pf-c-pagination__nav-control.pf-m-prev {
-      --pf-c-pagination__nav-control--c-button--PaddingLeft: var(--pf-c-pagination--m-bottom__nav-control--m-prev--c-button--PaddingLeft);
-      --pf-c-pagination__nav-control--c-button--PaddingRight: var(--pf-c-pagination--m-bottom__nav-control--m-prev--c-button--PaddingRight);
-    }
-
-    .pf-c-pagination__nav-control.pf-m-next {
-      --pf-c-pagination__nav-control--c-button--PaddingLeft: var(--pf-c-pagination--m-bottom__nav-control--m-next--c-button--PaddingLeft);
-      --pf-c-pagination__nav-control--c-button--PaddingRight: var(--pf-c-pagination--m-bottom__nav-control--m-next--c-button--PaddingRight);
-    }
-
     .pf-c-options-menu {
       position: absolute;
     }
@@ -141,13 +135,6 @@
       position: relative;
       justify-content: flex-end;
       padding: var(--pf-c-pagination--m-bottom--md--PaddingTop) var(--pf-c-pagination--m-bottom--md--PaddingRight) var(--pf-c-pagination--m-bottom--md--PaddingBottom) var(--pf-c-pagination--m-bottom--md--PaddingLeft);
-
-      .pf-c-pagination__nav-control .pf-c-button {
-        --pf-c-pagination--m-bottom__nav-control--c-button--PaddingTop: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingTop);
-        --pf-c-pagination__nav-control--c-button--PaddingRight: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingRight);
-        --pf-c-pagination--m-bottom__nav-control--c-button--PaddingBottom: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingBottom);
-        --pf-c-pagination__nav-control--c-button--PaddingLeft: var(--pf-c-pagination--m-bottom__nav-control--c-button--md--PaddingLeft);
-      }
 
       .pf-c-pagination__nav-control.pf-m-first,
       .pf-c-pagination__nav-control.pf-m-last,
